# invert-image

./: .gitignore  Dockerfile  README.md  image-inverter.cwl  pyproject.toml  requirements.txt
invert-image/: __main__.py
